--- a/ui/qtquickcontrols2.conf
+++ b/ui/qtquickcontrols2.conf
@@ -3,7 +3,7 @@
 ; http://doc.qt.io/qt-5/qtquickcontrols2-configuration.html
 
 [Controls]
-Style=Suru
+Style=Material
 
 [Material]
 Primary=#3f4953
@@ -11,7 +11,7 @@ Primary=#3f4953
 Accent=LightGreen
 ;Primary=#04102a
 ;
-Theme=Light
+Theme=Dark
 
 
 [Universal]
