--- a/packaging/ubuntu_touch/manifest.json
+++ b/packaging/ubuntu_touch/manifest.json
@@ -1,15 +1,15 @@
 {
-    "name": "sfxr-qt.lduboeuf",
+    "name": "me.lduboeuf.sfxr",
     "description": "Sound Effect Generator",
     "architecture": "armhf",
     "title": "hw",
     "hooks": {
-        "sfxr-qt": {
-            "apparmor": "sfxr-qt.apparmor",
-            "desktop":  "sfxr-qt.desktop"
+        "sfxr": {
+            "apparmor": "sfxr.apparmor",
+            "desktop":  "sfxr.desktop"
         }
     },
-    "version": "0.1",
+    "version": "0.6.1",
     "maintainer": "lionel <lionel.duboeuf@gmail.com>",
     "framework" : "ubuntu-sdk-16.04"
 }
