fix volume cutoff, white icons, rename a file

--- a/ui/qtquickcontrols2.conf
+++ b/ui/qtquickcontrols2.conf
@@ -4,6 +4,7 @@
 
 [Controls]
 Style=Material
+FallbackStyle=Universal
 
 [Material]
 Primary=#3f4953
@@ -15,8 +16,10 @@ Theme=Dark
 
 
 [Universal]
-Accent=#41cd52
-Theme=System
+Primary=#3f4953
+Accent=LightGreen
+Foreground=White
+Theme=Dark
 
 [Suru]
 Theme=Dark
