--- a/ui/qtquickcontrols2.conf
+++ b/ui/qtquickcontrols2.conf
@@ -7,9 +7,10 @@ Style=Material
 FallbackStyle=Universal
 
 [Material]
-Primary=#3f4953
+Primary=#16213e
 ;Foreground=#2ab1b2
-Accent=LightGreen
+Background=#1a1a2e
+Accent=#e94560
 ;Primary=#04102a
 ;
 Theme=Dark
@@ -17,7 +18,7 @@ Theme=Dark
 
 [Universal]
 Primary=#3f4953
-Accent=LightGreen
+Accent=#e94560
 Foreground=White
 Theme=Dark
 
